--- a/bt/eg.html
+++ b/bt/eg.html
@@ -19,7 +19,7 @@
         color:whitesmoke;
         background-color: gray;
         padding: 24px 24px 24px 24px;
-        /* margin: 0px auto; */
+        margin: 0px auto;
         
     }
     .w-45 {
